--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul class="contact-list list">
           <li class="contact-item">
             <a href="mailto:info@devstudio.com" class="contact-link link">
-              <svg widht="16" height="12" class="contact-icon">
+              <svg width="16" height="12" class="contact-icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -54,7 +54,7 @@
           </li>
           <li class="contact-item">
             <a href="tel:+380961111111" class="contact-link link"
-              ><svg widht="16" height="12" class="contact-icon">
+              ><svg width="16" height="12" class="contact-icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -77,7 +77,7 @@
 
       <!-- Benefits -->
       <section class="section no-padding-bottom">
-        <div class="features-thumb">
+        <!-- <div class="features">
           <ul>
             <li class="benefits-icons list">
               <a href="" class="feature-list"
@@ -104,11 +104,20 @@
               ></a>
             </li>
           </ul>
-        </div>
+        </div> -->
+
+        <!-- </li>
+          </ul>
+        </div> -->
         <div class="container">
           <h2 class="visually-hidden">Переваги роботи в компанії</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg width="70" height="70" class="feature-icons">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -116,6 +125,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg width="70" height="70" class="feature-icons">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -123,12 +137,22 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg width="70" height="70" class="feature-icons">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">ПЛАНУВАННЯ</h3>
               <p class="text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icons">
+                <svg width="70" height="70" class="feature-icons">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -331,7 +355,51 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2>Постійні клієнти</h2>
+          <h2 class="title">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <div class="">
+                <svg widht="41" height="46.7">
+                  <use href="./images/icons.svg#icon-group1"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="">
+                <svg widht="40" height="52">
+                  <use href="./images/icons.svg#icon-group2"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="">
+                <svg width="43.46" height="41.18">
+                  <use href="./images/icons.svg#icon-group3"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="">
+                <svg width="84.44" height="40.62">
+                  <use href="./images/icons.svg#icon-group4"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="">
+                <svg width="62.54" height="45.43">
+                  <use href="./images/icons.svg#icon-group5"></use>
+                </svg>
+              </div>
+            </li>
+            <li>
+              <div class="">
+                <svg width="93.79" height="43.93">
+                  <use href="./images/icons.svg#icon-group6"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
