--- a/index.html
+++ b/index.html
@@ -353,26 +353,26 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="title">Постійні клієнти</h2>
           <ul class="clients-list list">
             <li class="clients-item">
-              <div class="">
+              <div class="clients-logo">
                 <svg widht="41" height="46.7">
                   <use href="./images/icons.svg#icon-group1"></use>
                 </svg>
               </div>
             </li>
             <li>
-              <div class="">
+              <div class="clients-logo">
                 <svg widht="40" height="52">
                   <use href="./images/icons.svg#icon-group2"></use>
                 </svg>
               </div>
             </li>
             <li>
-              <div class="">
+              <div class="clients-logo">
                 <svg width="43.46" height="41.18">
                   <use href="./images/icons.svg#icon-group3"></use>
                 </svg>
@@ -401,7 +401,25 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
+      <div class="container">
+        <h2 class="clients-title">Постійні клієнти</h2>
+
+        <ul class="clients-list list">
+          <li class="clients-item">
+            <a href="" class="clients-link">
+              <svg class="clients-icons" width="106" heigth="60">
+                <use href="./images/icons.svg#icon-group1"></use>
+              </svg>
+            </a>
+          </li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
     </main>
     <!-- Footer -->
     <footer class="footer-page">
